@@ -12,15 +12,19 @@ data:extend({
         name = "ArcFurnace-type",
         setting_type = "startup",
         default_value = "furnace",
-        allowed_values = {"assembling-machine", "furnace"},
-        order = "a"
+        allowed_values = {"assembling-machine", "furnace"}
     },
     {
         type = "string-setting",
         name = "ArcFurnace-crafting-category",
         setting_type = "startup",
         default_value = "arc-smelting",
-        allowed_values = {"smelting", "arc-smelting", "smelting+kiln"},
-        order = "a"
+        allowed_values = {"smelting", "arc-smelting", "smelting+kiln"}
+    },
+    {
+        type = "bool-setting",
+        name = "ArcFurnace-space-platform",
+        setting_type = "startup",
+        default_value = false
     }
 })
